vm_object: do not assume that un_pager.devp.dev is cdev

PR:	282533
Approved by:	re (cperciva)

(cherry picked from commit 580340dbdaaf372867e9ed3dd257430982753e5e)
(cherry picked from commit 92a9501b6be3d37a4eefcfbdda799b656ae146e8)